caprevoke: Introduce syscalls

--- a/sys/kern/syscalls.master
+++ b/sys/kern/syscalls.master
@@ -1487,7 +1487,21 @@
 		    uint32_t key
 		);
 	}
-260-271	AUE_NULL	UNIMPL	nosys
+260	AUE_NULL	STD	{
+		int caprevoke_shadow(
+			int flags,
+			_In_ void *arena,
+			_Out_ void *shadow,
+		);
+	}
+261	AUE_NULL	STD	{
+		void *caprevoke(
+		    int flags,
+		    uint64_t start_epoch,
+		    _Out_ struct caprevoke_syscall_info *crsi,
+		);
+	}
+262-271	AUE_NULL	UNIMPL	nosys
 272	AUE_O_GETDENTS	COMPAT11 {
 		int getdents(
 		    int fd,
