caprevoke: rename kernel interface functions, part 1
The "cap_" namespace generally refers to Capsicum already, so move cheri
revocation things to "cheri_revoke_" or similar.  Open to better suggestions.

--- a/sys/kern/syscalls.master
+++ b/sys/kern/syscalls.master
@@ -1488,17 +1488,17 @@
 		);
 	}
 260	AUE_NULL	STD	{
-		int caprevoke_shadow(
+		int cheri_revoke_shadow(
 			int flags,
 			_In_ void *arena,
 			_Out_ void *shadow,
 		);
 	}
 261	AUE_NULL	STD	{
-		void *caprevoke(
+		void *cheri_revoke(
 		    int flags,
 		    uint64_t start_epoch,
-		    _Out_ struct caprevoke_syscall_info *crsi,
+		    _Out_ struct cheri_revoke_syscall_info *crsi,
 		);
 	}
 262-271	AUE_NULL	UNIMPL	nosys
